renamed field "class" to "flightClass", added /myData/byDate and /myData/byCategory, added tests
